--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 django = "^4.1.7"
 django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.0.2"}
+django-tailwind = "^3.5.0"
 
 
 [build-system]
