--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 django = "^4.1.7"
 django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.0.2"}
 django-tailwind = "^3.5.0"
+black = "^23.3.0"
 
 
 [build-system]
